--- a/glitch.css
+++ b/glitch.css
@@ -3,7 +3,7 @@
   }
 
   body {
-	font-family: "Raleway", sans-serif;
+	font-family: "Barlow Condensed";
 	background: #f9f8f8;
 	width: 100%;
   }  
