--- a/titlestyle.css
+++ b/titlestyle.css
@@ -23,3 +23,21 @@ main {
   border: 1px solid #fff;
 }
 
+.traits {
+  width: 40%; 
+  padding-left: 1vw; 
+  padding-right: 1vw; 
+  padding-top: 10vh; 
+  padding-bottom: 10vh; 
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto;
+}
+
+@media screen and (max-width: 900px) {
+  .traits {
+    width: 80%;
+    padding-top: 1vh; 
+    padding-bottom: 1vh; 
+  }
+}
