--- a/cardstyle.css
+++ b/cardstyle.css
@@ -59,10 +59,10 @@
 }
 
 .card {
-  width: 71.5vw;
-  height: 100vw;
+  width: 14.3vw;
+  height: 20vw;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 20px;
   overflow: hidden;
   z-index: 10;
@@ -80,12 +80,12 @@
   background-position: 50% 50%;
   transform-origin: center;
 }
-@media screen and (min-width: 600px) {
+/* @media screen and (min-width: 600px) {
   .card {
     width: clamp(12.9vw, 61vh, 18vw);
     height: clamp(18vw, 85vh, 25.2vw);
   }
-}
+} */
 
 .card:hover {
   box-shadow: -20px -20px 30px -25px var(--color1),
@@ -744,8 +744,8 @@
   padding-right: 30px;
   row-gap: 50px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-direction: row;
+  flex-wrap: wrap; */
   align-items: center;
   justify-content: space-evenly;
   perspective: 2000px;
@@ -760,7 +760,7 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 900px) {
+/* @media screen and (max-width: 900px) {
   .cards {
     padding-left: 30px;
     padding-right: 30px;
@@ -774,13 +774,13 @@
     position: relative;
     z-index: 1;
     transform: translate3d(0.1px, 0.1px, 0.1px);
-  }
+  } */
 
   /* .card {
     width: 71.5vw;
     height: 100vw;
   } */
-}
+
 .cards .card:nth-child(2),
 .cards .card:nth-child(2):before,
 .cards .card:nth-child(2):after {
