--- a/scrolltotop.css
+++ b/scrolltotop.css
@@ -1,6 +1,6 @@
 #scroller {
 	display: inline-block;
-	background-color: red;
+	background-color: #0d6efd;
 	width: 50px;
 	height: 50px;
 	text-align: center;
