--- a/footer.css
+++ b/footer.css
@@ -82,22 +82,22 @@ footer nav ul li {
 .wrapper {
   transform-origin: center bottom 0px;
   transition: all 0.5s ease 0s;
-  box-shadow: 0px 22px 54px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px 22px 54px rgba(0, 0, 0, 0.5); */
   /* background: var(--clr3); */
 }
 
-body.tight .wrapper {
+/* body.tight .wrapper {
   transform: translateY(-60px) scale(0.9);
   cursor: pointer;
-}
+} */
 
-.footer {
+/* .footer {
   width: 90%;
   max-width: 1440px;
   margin: 0px auto;
   text-align: center;
   margin-bottom: 50;
-}
+} */
 
 @keyframes bounce {
   0%,
